<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">Led Scrolling</string>
    <string name="background_color">BKGD COLOR</string>
    <string name="background_image">BKGD IMAGE</string>
    <string name="big">LARGE TEXT SIZE</string>
    <string name="bkg">BACKGROUND</string>
    <string name="blink_effect">Blink effect</string>
    <string name="cancel">CANCEL</string>
    <string name="change">Change</string>
    <string name="circular_led">CIRCULAR LED</string>
    <string name="dont_ask">NO WAY</string>
    <string name="flags">FLAGS OF COUNTRIES</string>
    <string name="flags_sub">FLAGS OF 36 COUNTRIES</string>
    <string name="font">Font</string>
    <string name="font_tittle">FONT</string>
    <string name="full_description">* Remove ads \n* Unlock 40 backgrounds \n* Unlock 6 fonts types</string>
    <string name="full_description_pro">* Preview mode</string>
    <string name="full_version_tittle">Full version</string>
    <string name="get_full">Buy</string>
    <string name="get_lite">Buy</string>
    <string name="home">HOME</string>
    <string name="how_was_xperience">Please let us know what you think about Led Scrolling Display</string>
    <string name="installed">Installed</string>
    <string name="invalid_video">Unlock fail, reward video closed</string>
    <string name="invert_direction">Invert direction</string>
    <string name="invite_message">Invite message</string>
    <string name="invite_tittle">Invite tittle</string>
    <string name="later">LATER</string>
    <string name="lite_version_tittle">Lite version</string>
    <string name="menu">Menu</string>
    <string name="mirror_effect">Mirror effect</string>
    <string name="no_adv">No ads available, please try again later or get the full version</string>
    <string name="ok">SELECT</string>
    <string name="paused">PAUSED</string>
    <string name="play">Play</string>
    <string name="play_message">Play message</string>
    <string name="purchase">Purchase</string>
    <string name="rate">YES, I`D LOVE TO</string>
    <string name="rate_google">Please help us out - Your Play Store reviews make a difference!</string>
    <string name="remove_adv">ENABLE PREVIEW</string>
    <string name="say_your_text">Say your message</string>
    <string name="scroll_speed">Scroll speed</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="share">Share</string>
    <string name="share_text">SHARE THIS MESSAGE</string>
    <string name="small">SMALL TEXT SIZE</string>
    <string name="special_ocasion">SPECIAL OCCASIONS</string>
    <string name="image_ocasion">SELECT IMAGE</string>

    <string name="special_occasion_sub">BKG for those special moments</string>
    <string name="image_occasion_sub">BKG for those image</string>

    <string name="squared_led">SQUARED LED</string>
    <string name="store">STORE</string>
    <string name="text_color">TEXT COLOR</string>
    <string name="type_text">Type your text</string>
    <string name="unlock">Watch</string>
    <string name="unlock_free">UNLOCK FOR FREE</string>
    <string name="watch_adv">View video and unlock item for free</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="default_web_client_id">594215248361-go0f5jn407ku8g7k67vda6g8a61010fe.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://led-scrolling-display-3.firebaseio.com</string>
    <string name="gcm_defaultSenderId">594215248361</string>
    <string name="google_api_key">AIzaSyA4xYxkGQYNiXo1nWqU9v-ZJIfzsSH0_4Y</string>
    <string name="google_app_id">1:594215248361:android:6348d1d7440e8a66</string>
    <string name="google_crash_reporting_api_key">AIzaSyA4xYxkGQYNiXo1nWqU9v-ZJIfzsSH0_4Y</string>
    <string name="google_storage_bucket">led-scrolling-display-3.appspot.com</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="project_id">led-scrolling-display-3</string>
    <string name="feedback">Feedback</string>
</resources>
